--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.1.1"
 black = "^24.8.0"
+python-dotenv = "^1.0.1"
+psycopg2-binary = "^2.9.9"
+django-ninja = "^1.3.0"
 
 
 [build-system]
