--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.9"
 django-ninja = "^1.3.0"
 pydantic = {extras = ["email"], version = "^2.9.2"}
+django-cors-headers = "^4.5.0"
 
 
 [build-system]
